--- a/index_addfriend.html
+++ b/index_addfriend.html
@@ -78,11 +78,30 @@
   <!-- End Fullpage Hero -->
   </div>
 
+
+<a class="the_add_friend" href="https://line.me/R/ti/p/w-hVQZ-GDG" target="_blank" class="p1" aria-label="Link to AMP HTML ">
+  <amp-img width="124" height="40" src="img/line@us2.png"></amp-img>
+</a>
+
+<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4" style="max-width: 120px; margin: 0 auto; padding-top: 20px;">
+    <li>
+        <a href="#" target="_blank" class="p1" aria-label="Link to AMP HTML Facebook">
+       <amp-img width="42" height="42" src="img/follow_us_icon_fb.png"></amp-img>
+    </a>
+    </li>
+    <li>
+        <a href="#" target="_blank" class="p1" aria-label="Link to AMP HTML line">
+       <amp-img width="42" height="42" src="img/follow_us_icon_line.png"></amp-img>
+    </a>
+    </li>
+</ul>
+
   <main id="content" role="main">
     <article class="photo-article">
         <p class="m3 h3 bold">很多人想看竹林都會選擇日本京都嵐山<br>
         	但其實台灣苗栗泰安就有媲美京都的竹林！<br>
         	如果不說，還以為置身日本呢！</p>
+
             <p class="m3 ampstart-dropcap">台版嵐山竹林隧道泰安竹林秘境又有人叫烏嘎彥竹林，位於苗栗泰安的竹林小徑因為貌似嵐山竹林隧道。</p>
             <p class="m3">在IG打卡加持下在網路迅速竄紅，高聳矗立的竹林美景形成天然隧道，加上在路邊竹林擺起來相似度超高。</p>
             <p class="m3">竹林隧道就位於烏嘎彥露營區的下方，而這裡滿滿的綠色浪漫絕對值得旅人探尋。</p>
@@ -141,11 +160,11 @@
 
       <h2 class="m3 center">世界美景這麼多<br>馬上加入Line@好友<br> 帶你看遍全世界美景！</h2>
 
-        <article class="ampstart-article-summary m0 relative">
+        <!-- <article class="ampstart-article-summary m0 relative">
           <a href="https://line.me/R/ti/p/w-hVQZ-GDG" target="_blank">
             <amp-img width="500" height="255" layout="responsive" src="img/line@us.jpg" style=" max-width: 450px; margin: 0 auto;"></amp-img>
           </a>
-        </article>
+        </article> -->
 
     </aside>
   </main>
@@ -153,8 +172,15 @@
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center px3 ">
 
-
-<!-- <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
+<!-- <div class="follow_usBox">
+    <a href="#" target="_blank" aria-label="Link to AMP HTML Twitter">
+       <amp-img width="42" height="42" src="img/follow_us_icon_fb.png"></amp-img>
+    </a>
+    <a href="#" target="_blank" aria-label="Link to AMP HTML Twitter">
+       <amp-img width="42" height="42" src="img/follow_us_icon_line.png"></amp-img>
+    </a>
+</div> -->
+<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
     <li>
         <a href="#" target="_blank" class="p1" aria-label="Link to AMP HTML Twitter">
        <amp-img width="42" height="42" src="img/follow_us_icon_fb.png"></amp-img>
@@ -165,8 +191,8 @@
        <amp-img width="42" height="42" src="img/follow_us_icon_line.png"></amp-img>
     </a>
     </li>
-</ul> -->
-<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
+</ul>
+<!-- <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
     <li>
         <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewbox="0 0 53 49"><title>Twitter</title><path d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6" class="ampstart-icon ampstart-icon-twitter"></path></svg></a>
     </li>
@@ -176,7 +202,7 @@
     <li>
         <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML line"><svg aria-hidden="true" data-prefix="fab" data-icon="line" class="svg-inline--fa fa-line fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"><path fill="currentColor" d="M272.1 204.2v71.1c0 1.8-1.4 3.2-3.2 3.2h-11.4c-1.1 0-2.1-.6-2.6-1.3l-32.6-44v42.2c0 1.8-1.4 3.2-3.2 3.2h-11.4c-1.8 0-3.2-1.4-3.2-3.2v-71.1c0-1.8 1.4-3.2 3.2-3.2H219c1 0 2.1.5 2.6 1.4l32.6 44v-42.2c0-1.8 1.4-3.2 3.2-3.2h11.4c1.8-.1 3.3 1.4 3.3 3.1zm-82-3.2h-11.4c-1.8 0-3.2 1.4-3.2 3.2v71.1c0 1.8 1.4 3.2 3.2 3.2h11.4c1.8 0 3.2-1.4 3.2-3.2v-71.1c0-1.7-1.4-3.2-3.2-3.2zm-27.5 59.6h-31.1v-56.4c0-1.8-1.4-3.2-3.2-3.2h-11.4c-1.8 0-3.2 1.4-3.2 3.2v71.1c0 .9.3 1.6.9 2.2.6.5 1.3.9 2.2.9h45.7c1.8 0 3.2-1.4 3.2-3.2v-11.4c0-1.7-1.4-3.2-3.1-3.2zM332.1 201h-45.7c-1.7 0-3.2 1.4-3.2 3.2v71.1c0 1.7 1.4 3.2 3.2 3.2h45.7c1.8 0 3.2-1.4 3.2-3.2v-11.4c0-1.8-1.4-3.2-3.2-3.2H301v-12h31.1c1.8 0 3.2-1.4 3.2-3.2V234c0-1.8-1.4-3.2-3.2-3.2H301v-12h31.1c1.8 0 3.2-1.4 3.2-3.2v-11.4c-.1-1.7-1.5-3.2-3.2-3.2zM448 113.7V399c-.1 44.8-36.8 81.1-81.7 81H81c-44.8-.1-81.1-36.9-81-81.7V113c.1-44.8 36.9-81.1 81.7-81H367c44.8.1 81.1 36.8 81 81.7zm-61.6 122.6c0-73-73.2-132.4-163.1-132.4-89.9 0-163.1 59.4-163.1 132.4 0 65.4 58 120.2 136.4 130.6 19.1 4.1 16.9 11.1 12.6 36.8-.7 4.1-3.3 16.1 14.1 8.8 17.4-7.3 93.9-55.3 128.2-94.7 23.6-26 34.9-52.3 34.9-81.5z"></path></svg></a>
     </li>
-</ul>
+</ul> -->
 
     <small>
       © 日日暖暖 Dailyanan, 2018
