按鈕更新大小
新增AD 版位

--- a/index_addfriend.html
+++ b/index_addfriend.html
@@ -80,7 +80,7 @@
 
 
 <a class="the_add_friend" href="https://line.me/R/ti/p/w-hVQZ-GDG" target="_blank" class="p1" aria-label="Link to AMP HTML ">
-  <amp-img width="124" height="40" src="img/line@us2.png"></amp-img>
+  <amp-img width="143" height="46" src="img/line@us2.png"></amp-img>
 </a>
 
 <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4" style="max-width: 120px; margin: 0 auto; padding-top: 20px;">
@@ -208,7 +208,8 @@
       © 日日暖暖 Dailyanan, 2018
     </small>
   </footer>
-
+  <div class="ad_320x480">
+  </div>
  <amp-audio width="auto" height="50" class="bottom_audio" src="https://ia801402.us.archive.org/16/items/EDIS-SRP-0197-06/EDIS-SRP-0197-06.mp3" controlsList="nodownload">
     <div fallback>
       <p>Your browser doesn’t support HTML5 audio</p>
