--- a/index_addfriend.html
+++ b/index_addfriend.html
@@ -79,7 +79,7 @@
   </div>
 
 
-<a class="the_add_friend" href="https://line.me/R/ti/p/w-hVQZ-GDG" target="_blank" class="p1" aria-label="Link to AMP HTML ">
+<a class="the_add_friend" href="https://line.me/R/ti/p/w-hVQZ-GDG" target="_blank" class="p1" aria-label="加入日日暖暖 LINE@ 好友">
   <amp-img width="143" height="46" src="img/line@us2.png"></amp-img>
 </a>
 
