--- a/02/index.html
+++ b/02/index.html
@@ -153,7 +153,7 @@
 
     <aside>
 
-      <h2 class="m3 center bold">如果你熱愛生活<br>想要多一點體悟<br>加入Line@<br>為你發現世界的美好!</h2>
+      <h2 class="m3 center bold">如果你熱愛生活<br>想要多一點體悟<br>加入Line@好友<br>為你發現世界的美好!</h2>
 
     </aside>
   </main>
