--- a/01/index.html
+++ b/01/index.html
@@ -144,12 +144,7 @@
             </ul>
         </footer>
         <div class="ad_320x480">
-            <amp-ad width=320 height=480
-                    type="doubleclick"
-                    data-slot="/57965253/dailyanan_MB_320x480">
-                <div placeholder>Ad</div>
-                <div fallback>Ad</div>
-            </amp-ad>
+            <amp-ad width=320 height=480 type="doubleclick" data-slot="/57965253/ca-pub-1418529948870857-tag/6563497991"></amp-ad>
         </div>
         <!-- End Footer -->
     </body>
