--- a/RH2/index.html
+++ b/RH2/index.html
@@ -73,6 +73,11 @@
     <section class="bannerBox">
         <div class="flexslider" id="flexslider">
             <ul class="slides">
+                <li style="background-image:url(images/banner/main_01-1.png);">
+                    <div class="ContentsBox animated slideInDown" data-animation="slideInDown" data-slideshowspeed="5000">
+                        <h3 class="banner_title">創新、誠信、合作<br>提供全方位的生理檢測資訊</h3>
+                    </div>
+                </li>
                 <li style="background-image:url(images/banner/main_01.png);">
                     <div class="ContentsBox animated slideInDown" data-animation="slideInDown" data-slideshowspeed="5000">
                         <h3 class="banner_title">創新、誠信、合作<br>提供全方位的生理檢測資訊</h3>
@@ -96,7 +101,7 @@
             <h2 class="main_title">公司簡介</h2>
             <h4 class="sub_title">Company Profile</h4>
             <p class="p_info"><span class="blue_line">全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。</span><Br></p>
-                <p>2016年Q3合倂微凸科技公司，整合其微針量產技術，投入可拋棄式微創連續血糖監測（CGMS）相關應用產品開發，為一家專注於可拋棄型醫療電子系統的完整方案設計公司。<br>
+                <p class="h24">2016年Q3合倂微凸科技公司，整合其微針量產技術，投入可拋棄式微創連續血糖監測（CGMS）相關應用產品開發，為一家專注於可拋棄型醫療電子系統的完整方案設計公司。<br>
                 <br>
                 第一代無線微型可拋棄溫度貼已上市，並搭配智慧型手機APP互動式軟體，建立全方位無間斷的醫學預警聯網系統。<br>
                 <br>公司目前重點投入研發製造高技術、高附加價值及高市場成長的血糖連續監測系統醫療器材產品開發，讓使用者可輕易監測生理代謝變化的訊號並回饋訊息。同時，亦將量測之結果進行大數據之分析，目標建立數位醫療及雲端服務的健康照護平台，協助使用者更輕易的自我管理血糖，並減輕負擔。</p>
@@ -146,7 +151,7 @@
             <li><p><a href="contact.html">加入全康</a></p></li>
         </ul>
         <div class="copyrightBox clearfix">
-            <p>Copyright © 2018 RichHealth </p>
+            <p>Copyright © 2018 RichHealth</p>
             <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
