新增 聯絡我們

--- a/RH2/contact.html
+++ b/RH2/contact.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>產品介紹 - RichHealth 全康科技</title>
+<title>最新消息 - RichHealth 全康科技</title>
 <meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
 <meta name="MobileOptimized" content="width">
@@ -60,9 +60,9 @@
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
                 <li><h3><a href="index.html">關於全康</a></h3></li>
-                <li class="btn_in"><h3><a href="product.html">產品介紹</a></h3></li>
+                <li><h3><a href="product.html">產品介紹</a></h3></li>
                 <li><h3><a href="news.html">最新消息</a></h3></li>
-                <li><h3><a href="contact.html">加入全康</a></h3></li>
+                <li class="btn_in"><h3><a href="contact.html">加入全康</a></h3></li>
             </ul>
             <p class="language"><a href="#">中文</a> 丨 <a href="#">English</a></p>
         </nav>
@@ -70,57 +70,58 @@
 </header>
 
 <main class="main_contents">
-    <section class="company_info purpose product f_color_blue align_flex">
+    <section class="company_info join f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">產品介紹</h2>
-            <h4 class="sub_title">Product description</h4>
-            <p class="p20">我們提供全方位的生理檢測系統，讓您隨時掌握自我的健康狀況。</p>
+            <h2 class="main_title">加入全康</h2>
+            <h4 class="sub_title">Join us</h4>
+            <p class="p20">感謝您參觀全康科技，希望您喜歡我們的資訊<br>若有任何疑問，歡迎您的指教與建議，或隨時與我們聯絡。</p>
         </div>
     </section>
-    <section class="company_info "><!-- w_triangle -->
+    <section class="company_info recruitBox">
         <div class="ContentsBox">
-            <h2 class="main_title">技術特點</h2>
-            <h4 class="sub_title">Technical characteristics</h4>
-            <p class="p_info"><span class="blue_line">全康科技整合多元生醫領域、高端電子元件設計、軟體設計專家、醫材法規人才及與全球行銷專才，投入高端醫療器材產品開發。以血糖量測技術領域為基礎，目標建立全方位生理檢測技術平台。</span><br></p>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.png" alt="技術特點" width="100%"></div>
+            <h2 class="main_title">人才招募</h2>
+            <p class="p_info"><span class="blue_line">菁英招募歡迎充滿熱誠，才華洋溢的你/妳，一同加入全康科技</span></p>
+            <div class="recruit_list clearfix">
+                <div class="both" data-scroll-reveal="enter left">
+                    <h3>研發人員</h3>
+                    <ul>
+                        <li><p>醫療器材研發人員。</p></li>
+                        <li><p>具高分子材料相關背景人才。</p></li>
+                        <li><p>具電化學/感測器相關領域人才。</p></li>
+                        <li><p>熟悉醫療器材之設計開發流程。</p></li>
+                    </ul>
+                </div>
+                <div class="both" data-scroll-reveal="enter left and move 50px over 2s">
+                    <h3>醫材法規相關人員</h3>
+                    <ul>
+                        <li><p>熟悉醫療器材相關法規。</p></li>
+                        <li><p>熟悉國內外產品查驗登記申請、變更及展延相`關工作。 </p></li>
+                        <li><p>對國內外之衛生主管機關及臨床委託研究公司之聯繫溝通。</p></li>
+                        <li><p>悉知並更新國內外開發、查登、品質系統相關法規之訂定及修改。</p></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="company_info service f_color_w align_flex">
-        <div class="ContentsBox bg-k" data-scroll-reveal="enter top">
-            <h2 class="main_title">客戶服務</h2>
-            <h4 class="sub_title">Customer service</h4>
-            <p class="p20">全康科技除了以自有品牌進行產品開發、認證及銷售外，亦提供專業的ODM/OEM服務，依據客戶的市場需求，提供客戶全方位的醫療電子系統的完整解決方案。</p>
-        </div>
-    </section>
-    <section class="company_info patent f_color_w align_flex">
-        <div class="ContentsBox bg-k" data-scroll-reveal="enter left">
-            <h2 class="main_title">專利組合</h2>
-            <h4 class="sub_title">Patent portfolio</h4>
-            <p class="p20">我們技術已獲得美國、台灣、歐洲等多國專利，可實際應用於血糖及多項生理訊號連續監測等領域。</p>
-        </div>
-    </section>
-    <section class="company_info product_list">
-        <div class="ContentsBox">
+    <section class="company_info contact_us bg_gray">
+        <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
+            <h2 class="main_title">聯絡我們</h2>
+            <p class="p_info">全康科技以專注於研發及業務行銷上，所以擁有自主開發及專利。</p>
             <ul>
-                <li class="clearfix" data-scroll-reveal="enter top and move 50px over 1s">
-                    <div class="photo p_01"></div>
-                    <div class="info">
-                        <h3>無線溫度量測系統</h3>
-                        <p><span>無線溫度貼，可即時偵測體溫，並將訊號傳輸至手機或接收器。</span><br>
-                        因應使用者的不同需求，分為兒童版和女性版，依不同的用戶而有不同的外觀設計。在產品設計上，亦重視使用者感受，貼片採用生物相容性佳的矽膠材質，能與肌膚舒適的緊密貼合。應用於兒童，可即時監測嬰幼兒體溫，提供警示提醒，確保兒童健康；將溫度貼應用於女性，可用於監測女性生理體徵，判斷女性月經期、排卵期，輔助女性備孕。</p>
-                    </div>
+                <li>
+                    <p class="add">30288 新竹縣竹北市台元1街8號2樓之10</p>
                 </li>
-                <li class="clearfix" data-scroll-reveal="enter left and move 50px over 1s">
-                    <div class="photo p_02"></div>
-                    <div class="info">
-                        <h3>葡萄糖微針感測器</h3>
-                        <p><span>本公司具專利獨特性的微侵入式的葡萄糖監測技術，可輕壓接觸皮膚，有效持續量測體內葡萄糖及生理代謝物的濃度變化，可有效減少患者因採血而帶來的疼痛與壓力。</span><br>
-                            產品技術上採用無痛微針陣列塗佈技術，可有效增強訊號，對葡萄糖的感測具有專一性、抗干擾，同時可保護及延續電極穩定性與持久性。再藉由公司電子電機專業研發人員所開發的獨特葡萄糖校正技術與演算法，消除不必要的誤判讀，大幅提高訊號的正確判別，領先業界的技術水準。全康產品亦整合藍芽技術與手機連結，並可主動提供警示及量測資料上傳雲端資料庫。<br>
-                        近年來，智慧行動裝置與穿戴裝置的流行，將來公司的產品亦將結合生活、流行與時尚產品，提供可便利量測與即時回饋等優勢，進行產品市場拓展。目前國際大廠亦相繼投入發展相關技術開發，亦是未來產品的發展趨勢。</p>
-                    </div>
+                <li>
+                    <p class="mail"><a href="mailto:dora_chen@richhealthtek.com" target="_blank">dora_chen@richhealthtek.com</a></p>
+                </li>
+                <li>
+                    <p class="phone">03-5601122</p>
                 </li>
             </ul>
         </div>
+    </section>
+    <section class="google_map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.733642280804!2d121.01042831466883!3d24.838780952244097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c0f05f3d0d%3A0xdfa2eb4b97f46ba8!2zMzAy5paw56u557ij56u55YyX5biC5Y-w5YWD6KGXMeiZn-aok-S5izEw!5e0!3m2!1szh-TW!2stw!4v1541423697636" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 </main>
 
