--- a/RH2/news.html
+++ b/RH2/news.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>最新消息 - RichHealth 全康科技</title>
+<title>加入全康 - RichHealth 全康科技</title>
 <meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
 <meta name="MobileOptimized" content="width">
@@ -71,7 +71,7 @@
 
 <main class="main_contents">
     <section class="company_info purpose news f_color_w align_flex">
-        <div class="ContentsBox">
+        <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">公司重要消息</h2>
             <h4 class="sub_title">News</h4>
             <p class="p20">全康科技，持續創新，掌握產業界相關技術及市場資訊，綜觀世界脈動!</p>
