--- a/RH2/contact.html
+++ b/RH2/contact.html
@@ -73,7 +73,7 @@
     <section class="company_info join f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">加入全康</h2>
-            <h4 class="sub_title">Join us</h4>
+            <!-- <h4 class="sub_title">Join us</h4> -->
             <p class="p20">感謝您參觀全康科技，希望您喜歡我們的資訊<br>若有任何疑問，歡迎您的指教與建議，或隨時與我們聯絡。</p>
         </div>
     </section>
