--- a/RH2/news.html
+++ b/RH2/news.html
@@ -73,7 +73,7 @@
     <section class="company_info purpose news f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">公司重要消息</h2>
-            <h4 class="sub_title">News</h4>
+            <!-- <h4 class="sub_title">News</h4> -->
             <p class="p20">全康科技，持續創新，掌握產業界相關技術及市場資訊，綜觀世界脈動!</p>
         </div>
     </section>
