--- a/RH2/product.html
+++ b/RH2/product.html
@@ -73,7 +73,7 @@
     <section class="company_info purpose product f_color_blue align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">產品介紹</h2>
-            <h4 class="sub_title">Product description</h4>
+            <!-- <h4 class="sub_title">Product description</h4> -->
             <p class="p20">我們提供全方位的生理檢測系統，讓您隨時掌握自我的健康狀況。</p>
         </div>
     </section>
