--- a/RH2/news.html
+++ b/RH2/news.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/menu.js"></script>
 
 <!-- jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
 
 <!-- FlexSlider -->
@@ -48,7 +48,7 @@
             <li><p class="language"><a href="#">中文</a> 丨 <a href="#">English</a></p></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
