--- a/RH2/index.html
+++ b/RH2/index.html
@@ -45,7 +45,7 @@
             <li><p class="language"><a href="#">中文</a> 丨 <a href="#">English</a></p></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
