--- a/RH2/contact.html
+++ b/RH2/contact.html
@@ -2,12 +2,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>最新消息 - RichHealth 全康科技</title>
+<title>加入全康 - RichHealth 全康科技</title>
 <meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="images/share_pic.jpg"/>
+<meta property="og:title" content="RichHealth 全康科技"/>
+<meta property="og:url" content="#"/>
+<meta property="og:description" content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
+<meta property="og:type" content="website"/>
+
+<!-- Share image -->
+<link rel="image_src" href="images/share_pic.jpg">
+<!--Icon image  -->
+<!-- <link rel="shortcut icon" href="images/favicon.ico" />
+<link rel="apple-touch-icon" href="https://img.holkee.com/main/apple-touch-icon.jpg">
+<link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.jpg">
+<link rel="apple-touch-icon" sizes="167x167" href="images/apple-touch-icon-167x167.jpg">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.jpg">
+<link rel="icon" type="image/png" href="images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="images/favicon_192x192.png" sizes="192x192"> -->
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -42,7 +61,7 @@
             <li><p><a href="product.html">產品介紹</a></p></li>
             <li><p><a href="news.html">最新消息</a></p></li>
             <li><p><a href="contact.html">加入全康</a></p></li>
-            <li><p class="language"><a href="#">中文</a> 丨 <a href="#">English</a></p></li>
+            <li><p class="language"><a href="contact_en.html">English</a></p></li>
         </ul>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
@@ -61,7 +80,7 @@
                 <li><h3><a href="news.html">最新消息</a></h3></li>
                 <li class="btn_in"><h3><a href="contact.html">加入全康</a></h3></li>
             </ul>
-            <p class="language"><a href="#">中文</a> 丨 <a href="#">English</a></p>
+            <p class="language"><a href="contact_en.html">English</a></p>
         </nav>
     </div>
 </header>
@@ -118,7 +137,7 @@
         </div>
     </section>
     <section class="google_map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.733642280804!2d121.01042831466883!3d24.838780952244097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c0f05f3d0d%3A0xdfa2eb4b97f46ba8!2zMzAy5paw56u557ij56u55YyX5biC5Y-w5YWD6KGXMeiZn-aok-S5izEw!5e0!3m2!1szh-TW!2stw!4v1541423697636" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.6456653378987!2d121.01606831500254!3d24.841788384062816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c459b26157%3A0x84dcb8e40f2b4526!2zMzAy5paw56u557ij56u55YyX5biC5Y-w5YWD5LiA6KGXOOiZnw!5e0!3m2!1szh-TW!2stw!4v1541567322299" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 </main>
 
