--- a/WS/index.html
+++ b/WS/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>王品 花饗宴</title>
-<meta name='description' content=""/>
-<meta name='keywords' content="王品, 牛排, 新品, 王者榮耀, 草莓饗宴, 金馬奇幻影展, 連鎖牛排餐廳, 草莓, WS, wangsteak, 外酥香內軟嫩, 高雄"/>
+<meta name='description' content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
+<meta name='keywords' content="王品, 牛排, 新品, 只款待心中最重要的人, 花饗宴, 花綻繆思, 金馬盛宴, 分享優惠, 連鎖牛排餐廳, WS, wangsteak, 外酥香內軟嫩, 高雄"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -13,11 +13,12 @@
 <meta property="og:image" content="images/share_pic.jpg"/>
 <meta property="og:title" content="????"/>
 <meta property="og:url" content="#"/>
-<meta property="og:description" content="王品牛排 X 金馬奇幻影展：草莓與豬排奇幻組合，厚切戰斧豬排佐莓果起司醬，外酥香內軟嫩，由金牌主廚匠心設計"/>
+<meta property="og:description" content="花饗宴，花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜，花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
 <link rel="image_src" href="images/share_pic.jpg">
+
 <link rel="stylesheet" href="css/KV-style.css">
 <link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -45,7 +46,6 @@
   Shadowbox.init();
 </script>
 
-
 </head>
 <body>
 
@@ -59,7 +59,8 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 	<!--main KV-->
-<div class="slider-container">
+	<main>
+<div class="slider-container" id="section2">
   <h1 class="KV_title" data-scroll-reveal="enter top">花饗宴</h1>
   <div class="flower_01 tmob" data-scroll-reveal="enter top enter left over 3s after 0.5s"></div>
   <div class="flower_02 tmob" data-scroll-reveal="enter top enter left over 2s after 0.5s"></div>
@@ -122,56 +123,13 @@
     </div>
   </div>
 </div>
-
-	<main>
-		<!-- <section class="hc-banner">
-			<ol></ol>
-			<ul class="banner">
-				<li class="hc-bannerbg" style="background-image: url(images/main_banner/01.jpg);">
-					<div class="hc-fly">
-						<img class="fly-one" src="images/banner_main_title.png" />
-						<div class="fly-two">
-						</div>
-						<p class="fly-three">Mullet Roe and Serrano Ham </p>
-					</div>
-				</li>
-				<li class="hc-bannerbg" style="background-image: url(images/main_banner/02.jpg);">
-					<div class="hc-fly">
-						<img class="fly-one" src="images/banner_main_title.png" />
-						<div class="fly-two">
-						</div>
-						<p class="fly-three">Innovative thinking  new ideas  perfect design</p>
-					</div>
-				</li>
-				<li class="hc-bannerbg" style="background-image: url(images/main_banner/03.jpg);">
-					<div class="hc-fly">
-						<img class="fly-one" src="images/banner_main_title.png" />
-						<div class="fly-two">
-						</div>
-						<p class="fly-three">Innovative thinking  new ideas  perfect design</p>
-					</div>
-				</li>
-				<li class="hc-bannerbg" style="background-image: url(images/main_banner/04.jpg);">
-					<div class="hc-fly">
-						<img class="fly-one" src="images/banner_main_title.png" />
-						<div class="fly-two">
-						</div>
-						<p class="fly-three">Innovative thinking  new ideas  perfect design</p>
-					</div>
-				</li>
-			</ul>
-		</section> -->
-
-		<!-- <section class="forMob_youtube">
-	    	<iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="王品25周年" src="https://www.youtube.com/embed/zNf_zSXwfu0?autoplay=1&amp;controls=1&amp;showinfo=0&amp;modestbranding=1&amp;loop=1&amp;fs=0&amp;cc_load_policty=0&amp;iv_load_policy=3&amp;autohide=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fimg.labnol.org&amp;widgetid=1" style="width:  100%;">
-	    	</iframe>
-	 	</section> -->
-
 		<section class="DataBox" id="section3">
 			<div class="box_title">
 				<h3 class="t04">看見花綻FUN</h3>
 			</div>
-			<div class="sub_box_title"><p>花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜<br>花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！</p></div>
+			<div class="sub_box_title">
+				<p class="pc">花綻最美的瞬間，最燦爛的滋味，從花園到餐桌以花入菜<span class="no">，</span><span class="b">花綠繽紛的配角，細緻感受花、葉賦予的味覺驚豔與美感！</span></p>
+			</div>
 		</section>
 
 		<section class="DataBox thebox foodinfo br00">
@@ -217,7 +175,7 @@
 		    </div>
 		</section>
 
-		<section class="DataBox Chef" id="section2">
+		<section class="DataBox Chef" id="section1">
 		    <div class="box_title">
 		    	<h3 class="t05">花綻繆思 • 金馬盛宴</h3>
 		    </div>
