調整內容、新增web icon、share pic

--- a/RH2/news.html
+++ b/RH2/news.html
@@ -4,29 +4,29 @@
 <meta charset="UTF-8">
 <title>最新消息- RichHealth 全康科技</title>
 <meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
-<meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
+<meta name='keywords' content="RichHealth, 全康, 科技, 醫療器材, 全方位, 生理檢測, 高端電子, 葡萄糖, 監測系統, 血糖, 生物感測器, 感測器, 睿取, 尿酸, 乳酸 "/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
 <meta property="og:title" content="RichHealth 全康科技"/>
-<meta property="og:url" content="#"/>
+<meta property="og:url" content="http://www.richhealthtek.com/"/>
 <meta property="og:description" content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
 <!--Icon image  -->
-<!-- <link rel="shortcut icon" href="images/favicon.ico" />
-<link rel="apple-touch-icon" href="https://img.holkee.com/main/apple-touch-icon.jpg">
-<link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.jpg">
-<link rel="apple-touch-icon" sizes="167x167" href="images/apple-touch-icon-167x167.jpg">
-<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.jpg">
-<link rel="icon" type="image/png" href="images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="images/favicon_192x192.png" sizes="192x192"> -->
+<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -89,27 +89,20 @@
     <section class="company_info purpose news f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">公司重要消息</h2>
-            <!-- <h4 class="sub_title">News</h4> -->
             <p class="p20">全康科技，持續創新，掌握產業界相關技術及市場資訊，綜觀世界脈動!</p>
         </div>
     </section>
     <section class="company_info newsBox">
         <div class="ContentsBox">
-            <h2 class="new_main_title">醫療相關訊息</h2>
+            <h2 class="new_main_title">全康相關訊息</h2>
             <ul>
                 <li class="clearfix">
-                    <p class="day">2018-7-23</p>
+                    <p class="day">2018-7</p>
                     <div class="new_info">
                         <p>全康科技的創新CGMS產品技術於2017與2018年連續獲得『中華民國經濟部工業局個別企業專利檢索加值服務計畫』補助，此創新技術獲得市場高度關注及評審委員高度肯定。</p>
                         <div class="photo">
                             <img src="images/news_photo.png" width="100%">
                         </div>
-                    </div>
-                </li>
-                <li class="clearfix">
-                    <p class="day">2018-7-23</p>
-                    <div class="new_info">
-                        <p>全康科技的創新CGMS產品技術於2017與2018年連續獲得『中華民國經濟部工業局個別企業專利檢索加值服務計畫』補助，此創新技術獲得市場高度關注及評審委員高度肯定。</p>
                     </div>
                 </li>
             </ul>
@@ -118,17 +111,23 @@
     <section class="company_info newsBox bg_gray">
         <div class="ContentsBox">
             <h2 class="new_main_title">醫療相關訊息</h2>
-            <ul>
+            <ul class="gray_line">
                 <li class="clearfix">
-                    <p class="day">2018-7-23</p>
+                    <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p>全康科技的創新CGMS產品技術於2017與2018年連續獲得『中華民國經濟部工業局個別企業專利檢索加值服務計畫』補助，此創新技術獲得市場高度關注及評審委員高度肯定。</p>
+                        <p><a href="https://www.ontrackdiabetes.com/live-well/diabetes-management/cgm-news-medicare-approves-link-users-smartphones" target="_blank">CGM News: Medicare Approves Link to Users' Smartphones</a></p>
                     </div>
                 </li>
                 <li class="clearfix">
-                    <p class="day">2018-7-23</p>
+                    <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p>全康科技的創新CGMS產品技術於2017與2018年連續獲得『中華民國經濟部工業局個別企業專利檢索加值服務計畫』補助，此創新技術獲得市場高度關注及評審委員高度肯定。</p>
+                        <p><a href="https://www.healthline.com/diabetesmine/news-medicare-coverage-cgm-smartphone-app-use" target="_blank">NEWS: Medicare to Cover CGM with Connected Smartphone Use</a></p>
+                    </div>
+                </li>
+                <li class="clearfix">
+                    <p class="day">2018-11</p>
+                    <div class="new_info">
+                        <p><a href="https://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm611475.html" target="_blank">FDA approves automated insulin delivery and monitoring system for use in younger pediatric patients</a></p>
                     </div>
                 </li>
             </ul>
