--- a/RH2/product_en.html
+++ b/RH2/product_en.html
@@ -2,12 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>Product - RichHealth</title>
-<meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
-<meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
+<title>Product - RealHealth Technology Corporation</title>
+<meta name='description' content="RichHealth was founded in April 2016 and is focusing on disposable medical electronics. In Q3, 2016, the company merged with Micro Needle Technology Co., Ltd. (TW) to co-develop painless CGMS related products."/>
+<meta name='keywords' content="CGMs, continuous glucose monitoring system, RichHealth, RichHealth Technology Corporation, uric acid sensor, lactic acid sensor,Biosensor, glucose sensor, metaReach"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
+<meta property="og:title" content="RealHealth Technology Corporation"/>
+<meta property="og:url" content="http://www.richhealthtek.com/"/>
+<meta property="og:description" content="RichHealth was founded in April 2016 and is focusing on disposable medical electronics. In Q3, 2016, the company merged with Micro Needle Technology Co., Ltd. (TW) to co-develop painless CGMS related products."/>
+<meta property="og:type" content="website"/>
+
+<!-- Share image -->
+<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
+<!--Icon image  -->
+<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
+
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -52,7 +72,7 @@
 
 
 <header class="HeaderBox">
-    <div class="logoBox"><h1><a href="index.html">RichHealth</a></h1></div>
+    <div class="logoBox"><h1><a href="index_en.html">RichHealth</a></h1></div>
     <div class="menuBox">
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
