--- a/RH2/contact.html
+++ b/RH2/contact.html
@@ -4,29 +4,29 @@
 <meta charset="UTF-8">
 <title>加入全康 - RichHealth 全康科技</title>
 <meta name='description' content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
-<meta name='keywords' content="RichHealth, 全康, 科技, 生醫, 醫療器材, 全方位, 生理檢測, 高端電子,專家, 行銷專才 "/>
+<meta name='keywords' content="RichHealth, 全康, 科技, 醫療器材, 全方位, 生理檢測, 高端電子, 葡萄糖, 監測系統, 血糖, 生物感測器, 感測器, 睿取, 尿酸, 乳酸 "/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
 <meta property="og:title" content="RichHealth 全康科技"/>
-<meta property="og:url" content="#"/>
+<meta property="og:url" content="http://www.richhealthtek.com/"/>
 <meta property="og:description" content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
 <!--Icon image  -->
-<!-- <link rel="shortcut icon" href="images/favicon.ico" />
-<link rel="apple-touch-icon" href="https://img.holkee.com/main/apple-touch-icon.jpg">
-<link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.jpg">
-<link rel="apple-touch-icon" sizes="167x167" href="images/apple-touch-icon-167x167.jpg">
-<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.jpg">
-<link rel="icon" type="image/png" href="images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="images/favicon_192x192.png" sizes="192x192"> -->
+<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
