--- a/WS/index.html
+++ b/WS/index.html
@@ -84,7 +84,7 @@
           <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
         </svg>
         <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“無花果烏魚子生火腿”</h2>
+          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“櫻桃鴨胸佐芋香鴨肝”</h2>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@
           <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
         </svg>
         <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“玉米爆米花濃湯”</h2>
+          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“無花果烏魚子生火腿”</h2>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
           <path class="slide__overlay-path" d="M0,0 200,0 120,405 0,405" />
         </svg>
         <div class="slide__text">
-          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“櫻桃鴨胸佐芋香鴨肝”</h2>
+          <h2 class="sub_title" data-scroll-reveal="enter top enter left over 2s after 0.5s">“玉米爆米花濃湯”</h2>
         </div>
       </div>
     </div>
@@ -135,6 +135,15 @@
 		<section class="DataBox thebox foodinfo br00">
 		    <div class="ContentsBox">
 		      <div class="infoBox clearfix">
+		      	<div class="youtubeBox" data-scroll-reveal="enter top enter top over 3s after 0.5s">
+		        	<iframe id="muteYouTubeVideoPlayer" src="https://www.youtube.com/embed/LRotH8UbFhI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		         	<h4 class="t09-1">【花綻繆思•金馬盛宴】</h4>
+		          	<p>花綻最美的瞬間，最燦爛的滋味<br>
+		            	從花園到餐桌以花入菜，花綠繽紛的配角<br>
+		            	金牌主廚設計一場視覺、嗅覺及味覺饗宴<br>
+		            	細緻感受花、葉賦予的味覺驚豔與美感！
+		          	</p>
+		        </div>
 
 		        <div class="box_for2 clearfix" data-scroll-reveal="enter top enter left over .8s after 0.5s">
 		        	<div class="infoBoxleft">
@@ -146,8 +155,8 @@
 		        		</h3>
 		        	</div>
 		        	<div class="infoBoxright">
-		            	<h4 class="t09-2">【分享影片我款待】</h4>
-		            	<p>活動時間：即日起 ~ 2018/11/30 止<br>
+		            	<h4 class="t09-2">【花綻繆思•您分享我款待】</h4>
+		            	<p>活動時間：即日起 ~ 2018/12/31 止<br>
 		            		活動方式：分享+TAG<br>
 		            		1、公開分享此影片至個人FB或IG<br>
 		            		2、PO 文 <a class="tag" href="https://www.facebook.com/hashtag/%E7%8E%8B%E5%93%8125%E9%80%B1%E5%B9%B4?source=feed_text" target="_blank">#王品25週年</a>
@@ -183,7 +192,7 @@
 		      <li class="food_01">
 		        <div class="info">
 		          <div class="tBox">
-		            <p><b>無花果烏魚子生火腿</b></p>
+		            <p><b>櫻桃鴨胸佐芋香鴨肝</b></p>
 		            <p class="btn_more"><a class="fancybox fancybox.iframe" target="_blank" href="iframe/food_01.html">詳細介紹</a></p>
 		          </div>
 		        </div>
@@ -191,7 +200,7 @@
 		      <li class="food_02">
 		        <div class="info">
 		          <div class="tBox">
-		            <p><b>玉米爆米花濃湯</b></p>
+		            <p><b>無花果烏魚子生火腿</b></p>
 		            <p class="btn_more"><a class="fancybox fancybox.iframe" target="_blank" href="iframe/food_02.html">詳細介紹</a></p>
 		          </div>
 		        </div>
@@ -199,7 +208,7 @@
 		      <li class="food_03">
 		        <div class="info">
 		          <div class="tBox">
-		            <p><b>櫻桃鴨胸佐芋香鴨肝</b></p>
+		            <p><b>玉米爆米花濃湯</b></p>
 		            <p class="btn_more"><a class="fancybox fancybox.iframe" target="_blank" href="iframe/food_03.html">詳細介紹</a></p>
 		          </div>
 		        </div>
